use JDK 16 with ZGC
Signed-off-by: Ludovic Orban <lorban@bitronix.be>